--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 build_type = debug
 monitor_filters = esp8266_exception_decoder
 lib_deps =
-  Adafruit NeoPixel
+  makuna/NeoPixelBus @ ^2.6.0
   Adafruit TCS34725
       
 ;  [env:megaatmega2560]
